--- a/Bloom.CLI.Tests/Bloom.CLI.Tests.csproj
+++ b/Bloom.CLI.Tests/Bloom.CLI.Tests.csproj
@@ -9,7 +9,9 @@
 
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.2"/>
+        <PackageReference Include="FluentAssertions" Version="8.2.0"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
+        <PackageReference Include="NSubstitute" Version="5.3.0"/>
         <PackageReference Include="xunit" Version="2.9.2"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2"/>
     </ItemGroup>
@@ -19,7 +21,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Bloom.CLI\Bloom.CLI.csproj" />
+        <ProjectReference Include="..\Bloom.CLI\Bloom.CLI.csproj"/>
     </ItemGroup>
 
 </Project>
