Change the assembly name of Bloom.CLI to bloom, which is a nicer name for a command line tool

--- a/Bloom.CLI/Bloom.CLI.csproj
+++ b/Bloom.CLI/Bloom.CLI.csproj
@@ -4,7 +4,9 @@
         <Nullable>enable</Nullable>
         <OutputType>Exe</OutputType>
         <PublishAot>true</PublishAot>
+        <AssemblyName>bloom</AssemblyName>
         <ImplicitUsings>enable</ImplicitUsings>
+        <RootNamespace>Bloom.CLI</RootNamespace>
         <TargetFramework>net9.0</TargetFramework>
     </PropertyGroup>
 
